--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -4,21 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>{{post.title}}</title>
 </head>
 <body>
     <main>
         <h1>Bienvenidos a mi blog</h1>
         <h2>Archivo personal de mis entradasa</h2>
         <p>Estas son las entradas mas recientes</p>
-        {%for post in posts%}
-            <div>
-                <h3>{{post.title}}</h3>
-                <span class="date">{{post.created|date:"SHORT_DATE_FORMAT"}}</span>
-                <p>{{post.content|truncatewords:"20"}}</p>
-                <a href="/blog/{{post.id}}">Leer más</a>
-            </div>
-        {%endfor%}
+        <h3>{{post.title}}</h3>
+        <span class="date">{{post.created}}</span>
+        <p>{{post.content}}</p>
+        <a href="/">Volver a la portada</a>
     </main>
 </body>
 </html>
