--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{%block title%}{%endblock%}</title>
+    <link rel="stylesheet" href="{%static 'blog/styles.css'%}">
 </head>
 <body>
     <main>
+        <img class="top" src="{% static 'blog/hektor.png' %}">
         <h1>Bienvenidos a mi blog</h1>
         <h2>Archivo personal de mis entradasa</h2>
 
